# jwkserve

./: .gitignore  Cargo.toml  Dockerfile  LICENSE.md  README.md  docker-compose.yaml  package.json
.github/workflows/: build.yml  release.yml
infrastructure/: Dockerfile  README.md  backend.hcl  contact.auto.tfvars.example  main.tf  variables.tf
scripts/: build-all.sh  build-binary.sh  build-container.sh  coverage.sh
src/: Cargo.toml  errors.rs  key.rs  lib.rs  main.rs  router.rs
src/commands/: keygen.rs  mod.rs  serve.rs  show.rs  sign.rs  verify.rs
src/jwkserve/: Cargo.toml  README.md
src/jwkserve-cli/: Cargo.toml  README.md
src/jwkserve-cli/src/: main.rs
src/jwkserve/src/: handler.rs  jwks.rs  key.rs  lib.rs  routes.rs
src/utils/: base64.rs
tests/: algorithms_test.rs  endpoints_test.rs  error_handling_test.rs  integration_test.rs  jwt_structure_test.rs
tests/common/: mod.rs
tests/fixtures/: ecdsa_p256.pem  ecdsa_p384.pem  ecdsa_p521.pem  example_2048.pem  example_3072.pem  example_4096.pem  rsa_2048.pem  rsa_3072.pem  rsa_4096.pem
website/: index.html
