[package]
name = "jwkserve-cli"
edition = "2021"
version = "0.0.0"

authors = ["Sebastian Müller"]
description = "CLI tool for jwkserve - a fake authentication service for local development"
license = "MIT"
repository = "https://github.com/sbstjn/jwkserve"
keywords = ["jwt", "jwks", "authentication", "development", "cli"]
categories = ["authentication", "command-line-utilities", "development-tools", "development-tools::testing", "web-programming::http-server"]

[[bin]]
name = "jwkserve"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros", "signal"] }
poem = "3.1.12"
tracing = "0.1.41"
tracing-subscriber = "0.3"

jwkserve = { version = "0.0.0", path = "../jwkserve" }
