[package]
name = "jwkserve"
edition = "2021"
version = "0.0.0"

authors = ["Sebastian Müller"]
description = "A fake authentication service to speed up local development for JWT consumers."
license = "MIT"
repository = "https://github.com/sbstjn/jwkserve"
keywords = ["jwt", "jwks", "authentication", "development", "api"]
categories = ["authentication", "development-tools", "development-tools::testing", "security", "web-programming::http-server"]

[dependencies]
poem = { version = "3.1.12", features = ["test"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = { version = "10", features = ["aws_lc_rs"] }
rsa = "0.9.8"
rand = "0.8" 
sha2 = "0.10"
base64 = "0.22"

[dev-dependencies]
tempfile = "3.8"
num-bigint = "0.4"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros", "signal", "sync"] }
